[gd_scene load_steps=6 format=3 uid="uid://cnvljhd8dw2q7"]

[ext_resource type="Script" uid="uid://8vohsc8wdwyw" path="res://frontend/ui/promotion_ui.gd" id="1_w5mbw"]
[ext_resource type="Texture2D" uid="uid://beevllaubek5f" path="res://frontend/pieces/textures/queen_white.tres" id="2_5k18q"]
[ext_resource type="Texture2D" uid="uid://iehu274lcwh5" path="res://frontend/pieces/textures/rook_white.tres" id="3_g0g74"]
[ext_resource type="Texture2D" uid="uid://f8pp8df8kycc" path="res://frontend/pieces/textures/bishop_white.tres" id="4_bnyn0"]
[ext_resource type="Texture2D" uid="uid://xspvbonlidrc" path="res://frontend/pieces/textures/knight_white.tres" id="5_ca7ds"]

[node name="PromotionUI" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.817521, 0.817521, 0.817521, 1)
script = ExtResource("1_w5mbw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 111.0
offset_bottom = 414.0

[node name="QueenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("2_5k18q")
icon_alignment = 1
expand_icon = true

[node name="RookButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_g0g74")
icon_alignment = 1
expand_icon = true

[node name="BishopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("4_bnyn0")
icon_alignment = 1
expand_icon = true

[node name="KnightButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("5_ca7ds")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="VBoxContainer/QueenButton" to="." method="_on_queen_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RookButton" to="." method="_on_rook_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BishopButton" to="." method="_on_bishop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/KnightButton" to="." method="_on_knight_button_pressed"]
